--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "author": "Enrique Chavez Romero",
     "license": "ISC",
     "dependencies": {
+        "apollo-resolvers": "^1.4.2",
         "babel-plugin-import-graphql": "^2.7.0",
+        "bcrypt": "^4.0.1",
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-graphql": "^0.9.0",
         "graphql": "^14.5.8",
         "graphql-import-node": "0.0.4",
         "graphql-tools": "^4.0.6",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.8.7",
         "rimraf": "^3.0.0"
     },
