--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "apollo-resolvers": "^1.4.2",
         "babel-plugin-import-graphql": "^2.7.0",
         "bcrypt": "^4.0.1",
+        "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-graphql": "^0.9.0",
